# tergiversators

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rustdoc.yml
src/: bag.rs  board.rs  lib.rs  main.rs
src/board/: bag.rs  board_space.rs
tergiversators-core/: Cargo.toml
tergiversators-core/docs/: layout.md
tergiversators-core/src/: board.rs  lib.rs
tergiversators-core/src/board/: board_space.rs  constants.rs
