[package]
name = "tergiversators"
version = "0.1.0"
edition = "2021"
description = "An implementation of the board game Turncoats"
repository = "https://github.com/dconman/tergiversators"
readme = "README.md"
license = "MIT"
keywords = ["game", "boardgame"]
categories = ["Games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.2.0"
rand = "0.8.5"
