[package]
name = "tergiversators"
version = "0.1.0"
edition = "2021"
description = "An implementation of the board game Turncoats"
repository = "https://github.com/dconman/tergiversators"
readme = "README.md"
license = "MIT"
keywords = ["game", "boardgame"]
categories = ["Games"]

[dependencies]
tergiversators-core = { path = "tergiversators-core", version = "0.1.0" }
enum-iterator = "1.2.0"
tungstenite = "0.18.0"
ctrlc = "3.2.5"
